--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ooloi Labs</title>
-    <link rel="stylesheet" href="tags.css">
+    <link rel="stylesheet" href="tagstyle.css">
 </head>
 <body>
     <div class="main">
@@ -36,7 +36,7 @@
     </div>
     <div class="footer">
     </div>
-   <script src="tags.js">
+   <script src="tagscript.js">
    </script>
 </body>
 </html>
